--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["quininer kel <quininer@live.com>"]
 lazy_static = "0.2"
 
 [dev-dependencies]
+rust-crypto = "0.2"
 openssl = "0.7"
 rand = "0.3"
